k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
spec:
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: api-node-docker
        imagePullPolicy: Never
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  selector:
    app: node-api
  clusterIP: 10.97.0.2
  ports:
  - port: 3001
    targetPort: 3001
