k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-main
  template:
    metadata:
      labels:
        app: node-main
    spec:
      containers:
      - name: node-main
        image: node-docker
        imagePullPolicy: Never
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: main-balancer
spec:
  type: NodePort
  clusterIP: 10.97.0.1
  selector:
    app: node-main
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
