k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  labels:
      name: main-ingress
spec:
  defaultBackend:
    service:
      name: main-service
      port:
        number: 3000
